# transformer_parallelisms

./: .gitignore  pyproject.toml  readme.md  requirements.txt  sample.py  train.py
data/: __init__.py  loader.py  shakespeare.tokens  tokenizer.model  tokenizer.py  train.npy  val.npy
distributed/: __init__.py  ops.py  ops_test.py
distributed/tensor_parallel/: __init__.py  attention.py  attention_test.py  embedding.py  embedding_test.py  linear.py  (+5 more)
examples/: config.py  single.json  single_core.yaml
layers/: __init__.py  activation.py  activation_test.py  attention.py  attention_test.py  core.py  embedding.py  embedding_test.py  linear.py  linear_test.py  mlp.py  mlp_test.py  norm.py  norm_test.py  softmax_cross_entropy.py  softmax_cross_entropy_test.py  transformer.py
megatron_lm/: attention.py  attention_test.py  mlp.py  mlp_test.py
megatron_ml/: mlp.py  mlp_test.py  tensor.py
models/: megatron_lm.py  transformer.py
mpi/: mlp.py  mlp_test.py  tensor.py
numpy_distributed/: __init__.py  general.py  layers.py  ops.py  ops_test.py  tensor.py
numpy_sequential/: __init__.py  activation.py  activation_test.py  attention.py  attention_test.py  embedding.py  layer.py  linear.py  linear_test.py  mlp.py  mlp_test.py  norm.py  softmax_cross_entropy.py  softmax_cross_entropy_test.py
optimizer/: adam.py
optimizers/: adam.py
tensor_parallel/: attention.py  attention_test.py  embedding.py  embedding_test.py  linear.py  linear_test.py  mlp.py  mlp_test.py  softmax_cross_entropy.py
tests/: test_nn.py  test_ops.py  test_tensor_parallel.py
world_utils/: tensor.py
(+33 files in other folders)
